do-kubernetes-cert-manager/chat-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: nidigeser/chatapp:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
