do-kubernetes-cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: chat
  namespace: chat
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - <YOUR_DOMAIN_NAME>
    secretName: chat-tls
  rules:
  - host: <YOUR_DOMAIN_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 80
